--- a/less/home-page.less
+++ b/less/home-page.less
@@ -17,7 +17,9 @@
     p {
       padding:0 15px;
     }
-  
+    @media @phone{
+      margin-top: 0;
+    }
   }
 
   .space-images {
