--- a/less/login.less
+++ b/less/login.less
@@ -35,4 +35,7 @@
             .rounded-border-large;
       }
     }
+    @media @phone{
+        margin-top: 0;
+    }
 }
