--- a/less/navigation.less
+++ b/less/navigation.less
@@ -32,6 +32,10 @@ header{
         &:hover{
             opacity: 1;
         }
+        @media @phone{
+            position: relative;
+            opacity: 1;
+        }
 
     }
 }
